[wcag] Fix contrast issue on geojson link

--- a/ckanext/nhm/theme/less/multisearch.less
+++ b/ckanext/nhm/theme/less/multisearch.less
@@ -188,6 +188,10 @@
   }
 }
 
+#geojson-link {
+  color: @primary2;
+}
+
 // TRANSITIONS -------------------------------------------------------------------------------------
 
 .slidedown-leave-active, .slidedown-enter-active,
